# translation-services

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/benchmark/: __init__.py  measurement.py  overlay.py  scoring.py  store.py
app/core/: config.py  schemas.py  util.py
app/grouping/: __init__.py  align.py  field_geometry.py  heuristics.py  hint_parser.py  layout.py  overlay.py  preserve.py  tokens.py  units.py  vlm.py
app/layout/: __init__.py  detector.py  evidence.py
app/ocr/: __init__.py  document_unwarp.py  merging.py  overlay.py  paddleocr.py  segment.py
app/pdf/: __init__.py  assemble.py  document.py  raster.py  textlayer.py
app/regression/: __init__.py  capture.py  compare.py  fixture.py  image.py  replay.py  run.py  snapshot.py
app/replacement/: __init__.py  color.py  erase.py  fit.py  geometry.py  inpaint.py  jobs.py  pixels.py  render.py
app/routes/: __init__.py  benchmark.py  common.py  image_regression.py  pdf_regression.py  prompts.py  requests.py
app/runtime/: __init__.py  records.py  scheduler.py  service.py
app/tasks/: rerender_image.py  rerender_pdf.py  retranslate_image.py  translate_image.py  (+1 more)
config/: settings.json
docs/: README.md  benchmark-method.md  inline-math-islands-design.md  layout-detector-audit.md  pdf-benchmark-regression-design.md  pdf-translation-design.md  pipeline-parallelism-design.md  re-placement.md  regression-test-design.md  replacement-architecture.md  review-findings-2026-07-04.md  testset-observations.md
scripts/: benchmark.py  capture_fixture.py  fetch_fonts.sh  inspect_grouping.py  pdf_regress.py  regress.py
tests/: test_api.py  test_benchmark_scoring.py  test_gold_fixture.py  test_grouping.py  test_layout.py  test_pdf_document.py  test_pdf_regression.py  test_pdf_textlayer.py  test_regression_capture.py  test_replacement.py  test_tokens.py  test_translate.py
(+47 files in other folders)
