[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "translation-services"
version = "0.1.0"
description = "FastAPI service for queued OCR/translation jobs, with PaddleOCR, llm-pool translation routing, artifacts, and metrics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "paddleocr==3.6.0",
  "paddlex[ocr]==3.6.1",
  "pillow>=10",
  # Soft-hyphen break points (TeX/LibreOffice dictionaries, ~45 Latin-script languages) so a
  # justified block's long compound can fill a line instead of leaving a gap no flush margin
  # can absorb — see app/replacement/text/hyphenation.py.
  "pyphen>=0.15",
  # translate_pdf: page census/rasterization at intake and raster-page PDF assembly (AGPL;
  # internal service). Also the planned native write-back backend (redact + re-typeset).
  "pymupdf>=1.26",
  "uvicorn>=0.30",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  # erase_fill_mode="inpaint" (LaMa, GPU-only). Blackwell needs the cu128 wheels:
  # pip install torch --index-url https://download.pytorch.org/whl/cu128
  "torch>=2.11",
]

[tool.setuptools.packages.find]
include = ["app*"]
